Updated portfolio sections and added project images

--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tenetur debitis perspiciatis labore quia enim numquam aperiam ab voluptates distinctio at id consequuntur fugiat, atque nam maxime repellat, corporis aliquam?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias delectus veniam hic repellendus ex perspiciatis obcaecati ipsam odit omnis deleniti iusto nam ea similique a, quis dolorum maxime fuga odio.</p>
-                <div class="tab-titles">
+                    <p>Hi, I’m Pratik Sainath Shinde, a Full Stack Developer with strong skills in the MERN stack and Java.
+                        I’m currently pursuing BE in IT at IIIT Pune, where I’ve built a solid foundation in programming and web technologies.
+                        I enjoy creating clean, responsive, and user-focused applications that solve real problems.
+                        My key projects include Zen – a Mental Health Support Application and a Travel Management System, both of which helped me improve in UI design, API integration, and backend logic.
+                        I constantly work on enhancing my DSA skills and learning new tools to write better, efficient code.
+                    </p>
+                        <div class="tab-titles">
                     <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
@@ -79,16 +83,17 @@
             <h1 class="sub-title">My Projects</h1>
             <div class="projects-list">
                 <div>
-                    <img src="images/pro1.jpg" class="img">
-                    <h2>Project 1</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus consequuntur quae repellat, debitis tenetur ad facilis consectetur maiores voluptatum? Dignissimos similique quibusdam eum quia ullam minima adipisci id sunt consectetur.</p>
-                    <a href="#">View more</a>
+                    <img src="images/zen.jpg" class="img">
+                    <h2>Zen-Mental Health Support Application</h2>
+                    <p>Zen is a mental health support web application built using the MERN stack.
+                        It allows users to track their mood, journal their thoughts, access motivational content, and chat with an AI-based support bot for guidance. The app focuses on providing a calm, user-friendly interface to help users manage stress, anxiety, and emotional well-being.
+                       </p>  <a href="#">View more</a>
                 </div>
                 <div>
-                    <img src="images/pro2.jpg" class="img">
-                    <h2>Project 2</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus consequuntur quae repellat, debitis tenetur ad facilis consectetur maiores voluptatum? Dignissimos similique quibusdam eum quia ullam minima adipisci id sunt consectetur.</p>
-                    <a href="#">View more</a>
+                    <img src="images/tms.jpg" class="img">
+                    <h2>Travel Management System</h2>
+                    <p>he Travel Management System is a web-based application designed to help users plan, book, and manage their trips efficiently. It allows users to explore destinations, view available packages, make bookings, and track travel details through a simple and user-friendly interface. The system aims to provide a smooth and organized travel experience.</p>
+                     <a href="#">View more</a>
                 </div>
                 <div>
                     <img src="images/proj3.jpeg" class="img">
